[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Fantasma/InimigoTeste.gd" type="Script" id=1]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Detectar/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hurtboxes + Hitboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Fantasma/Fantasma.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 37 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 37 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 37 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 37 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Andar",
"speed": 11.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.90368
height = 4.84632

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.31759
height = 11.4174

[node name="InimigoTeste" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 2 )]
max_health = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.148651, -7.13524 )
frames = SubResource( 5 )
animation = "Andar"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.496063, 2.3811 )
rotation = 1.57079
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.250702, -7.93208 )
rotation = 3.14159
shape = SubResource( 7 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="Cooldown" type="Timer" parent="."]
wait_time = 1.3
one_shot = true
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
